Syncs unit tests affected by this PR with the Android libcore latest.