@@ -5,7 +5,7 @@
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -119,12 +119,12 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
     public void test_addLjava_lang_Object() {
         // Test for method boolean java.util.LinkedHashSet.add(java.lang.Object)
         int size = hs.size();
-        hs.add(new Integer(8));
+        hs.add(Integer.valueOf(8));
         assertTrue("Added element already contained by set", hs.size() == size);
-        hs.add(new Integer(-9));
+        hs.add(Integer.valueOf(-9));
         assertTrue("Failed to increment set size after add",
                 hs.size() == size + 1);
-        assertTrue("Failed to add element to set", hs.contains(new Integer(-9)));
+        assertTrue("Failed to add element to set", hs.contains(Integer.valueOf(-9)));
     }
 
     /**
@@ -207,8 +207,8 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
         // Test for method boolean
         // java.util.LinkedHashSet.remove(java.lang.Object)
         int size = hs.size();
-        hs.remove(new Integer(98));
-        assertTrue("Failed to remove element", !hs.contains(new Integer(98)));
+        hs.remove(Integer.valueOf(98));
+        assertTrue("Failed to remove element", !hs.contains(Integer.valueOf(98)));
         assertTrue("Failed to decrement set size", hs.size() == size - 1);
 
         LinkedHashSet s = new LinkedHashSet();
@@ -236,27 +236,27 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
     public void test_retainAllLjava_util_Collection() {
         LinkedHashSet<Integer> lhs = new LinkedHashSet<Integer>();
         Vector v = new Vector<Float>();
-        v.add(new Float(3.14));
-        lhs.add(new Integer(1));
+        v.add(Float.valueOf(3.14f));
+        lhs.add(Integer.valueOf(1));
         assertEquals(1, lhs.size());
         lhs.retainAll(v);
         assertEquals(0, lhs.size());
         v = new Vector<Integer>();
-        v.add(new Integer(1));
-        v.add(new Integer(2));
-        v.add(new Integer(3));
-        v.add(new Integer(4));
-        v.add(new Integer(5));
-        v.add(new Integer(6));
-        lhs.add(new Integer(1));
-        lhs.add(new Integer(6));
-        lhs.add(new Integer(7));
-        lhs.add(new Integer(8));
-        lhs.add(new Integer(9));
-        lhs.add(new Integer(10));
-        lhs.add(new Integer(11));
-        lhs.add(new Integer(12));
-        lhs.add(new Integer(13));
+        v.add(Integer.valueOf(1));
+        v.add(Integer.valueOf(2));
+        v.add(Integer.valueOf(3));
+        v.add(Integer.valueOf(4));
+        v.add(Integer.valueOf(5));
+        v.add(Integer.valueOf(6));
+        lhs.add(Integer.valueOf(1));
+        lhs.add(Integer.valueOf(6));
+        lhs.add(Integer.valueOf(7));
+        lhs.add(Integer.valueOf(8));
+        lhs.add(Integer.valueOf(9));
+        lhs.add(Integer.valueOf(10));
+        lhs.add(Integer.valueOf(11));
+        lhs.add(Integer.valueOf(12));
+        lhs.add(Integer.valueOf(13));
         assertEquals(9, lhs.size());
         lhs.retainAll(v);
         assertEquals(2, lhs.size());
@@ -280,15 +280,15 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
 
     public void test_toArray() {
         LinkedHashSet<Integer> lhs = new LinkedHashSet<Integer>();
-        lhs.add(new Integer(1));
-        lhs.add(new Integer(6));
-        lhs.add(new Integer(7));
-        lhs.add(new Integer(8));
-        lhs.add(new Integer(9));
-        lhs.add(new Integer(10));
-        lhs.add(new Integer(11));
-        lhs.add(new Integer(12));
-        lhs.add(new Integer(13));
+        lhs.add(Integer.valueOf(1));
+        lhs.add(Integer.valueOf(6));
+        lhs.add(Integer.valueOf(7));
+        lhs.add(Integer.valueOf(8));
+        lhs.add(Integer.valueOf(9));
+        lhs.add(Integer.valueOf(10));
+        lhs.add(Integer.valueOf(11));
+        lhs.add(Integer.valueOf(12));
+        lhs.add(Integer.valueOf(13));
 
         Object[] o = lhs.toArray();
         for (int i = 0; i < o.length; i++) {
@@ -299,15 +299,15 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
 
     public void test_toArray$Ljava_lang_Object() {
         LinkedHashSet<Integer> lhs = new LinkedHashSet<Integer>();
-        lhs.add(new Integer(1));
-        lhs.add(new Integer(6));
-        lhs.add(new Integer(7));
-        lhs.add(new Integer(8));
-        lhs.add(new Integer(9));
-        lhs.add(new Integer(10));
-        lhs.add(new Integer(11));
-        lhs.add(new Integer(12));
-        lhs.add(new Integer(13));
+        lhs.add(Integer.valueOf(1));
+        lhs.add(Integer.valueOf(6));
+        lhs.add(Integer.valueOf(7));
+        lhs.add(Integer.valueOf(8));
+        lhs.add(Integer.valueOf(9));
+        lhs.add(Integer.valueOf(10));
+        lhs.add(Integer.valueOf(11));
+        lhs.add(Integer.valueOf(12));
+        lhs.add(Integer.valueOf(13));
 
         Object[] o1 = new Object[lhs.size()];
         Object[] o2 = new Double[lhs.size()];
@@ -317,7 +317,7 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
         }
 
         try {
-            lhs.toArray(null);
+            lhs.toArray((Object[]) null);
             fail("NullPointerException expected");
         } catch (NullPointerException e) {
             //expected
@@ -358,7 +358,7 @@ public class LinkedHashSetTest extends junit.framework.TestCase {
     protected void setUp() {
         objArray = new Object[1000];
         for (int i = 0; i < objArray.length; i++)
-            objArray[i] = new Integer(i);
+            objArray[i] = Integer.valueOf(i);
 
         hs = new LinkedHashSet();
         for (int i = 0; i < objArray.length; i++)
